--- a/index.html
+++ b/index.html
@@ -8,25 +8,26 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="app" class="bg-gray-900 pt-4">
-        <div class="text-white container mx-auto text-center p-8">
-          <h1 class="text-4xl">Vremenska prognoza</h1>
-          <div class="p-6">
-            <h2 class="text-xl">Temperatura zraka</h2>
-            <h1 class="text-2xl p-2">22°C</h1>
+    <div id="app" class="container mx-auto bg-gray-900 pt-4">
+        <div class="flex flex-col text-white mx-auto text-center p-2">
+
+          <div class="">
+            <h2 class="text-3xl uppercase">Temperatura zraka</h2>
+            <h1 class="text-4xl p-2">22°C</h1>
     
-            <h2 class="text-xl pt-4">Temperatura staze</h2>
-            <h1 class="text-2xl p-2">30°C</h1>
+            <h2 class="text-3xl pt-4 uppercase">Temperatura staze</h2>
+            <h1 class="text-4xl p-2">30°C</h1>
     
           </div>
-          <div class="flex flex-wrap pt-4">
-            <div class="w-1/2">
-              <h2 class="text-xl">Kvalifikacije</h2>
+          <div class="flex flex-wrap pt-2">
+            <div class="w-1/4"></div>
+            <div class="w-1/4">
+              <h2 class="text-3xl uppercase">Kvalifikacije</h2>
               <img class="mx-auto p-4" src="icons/0.png" alt="">
               <img class="mx-auto p-4" src="icons/0.png" alt="">
             </div>
-            <div class="w-1/2 mx-auto">
-              <h2 class="text-xl">Utrka</h2>
+            <div class="w-1/4">
+              <h2 class="text-3xl uppercase">Utrka</h2>
               <img class="mx-auto p-4" src="icons/0.png" alt="">
               <img class="mx-auto p-4" src="icons/0.png" alt="">
             </div>
@@ -35,7 +36,9 @@
         </div>
       </div>
 
-      <button id="button">Download</button>
+      <div class="container mx-auto">
+        <button id="button">Download</button>
+      </div>
       <script
 			  src="https://code.jquery.com/jquery-3.5.1.min.js"
 			  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
